WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115276
WebCore ObjC bridge is missing support for bool type
https://bugs.webkit.org/show_bug.cgi?id=115276
Summary
WebCore ObjC bridge is missing support for bool type
Michael Saboff
Reported
2013-04-26 14:11:29 PDT
The ObjC bridge doesn't handle boolean arguments or return types.
Attachments
Patch
(3.36 KB, patch)
2013-04-26 14:16 PDT
,
Michael Saboff
ggaren
: review+
ggaren
: commit-queue+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Saboff
Comment 1
2013-04-26 14:16:45 PDT
Created
attachment 199859
[details]
Patch
Geoffrey Garen
Comment 2
2013-04-26 14:27:58 PDT
Comment on
attachment 199859
[details]
Patch r=me rs=me to change the ASSERT to RELEASE_ASSERT, as we discussed.
Michael Saboff
Comment 3
2013-04-26 15:20:02 PDT
Committed
r149216
: <
http://trac.webkit.org/changeset/149216
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug