WebCore ObjC bridge is missing support for bool type https://bugs.webkit.org/show_bug.cgi?id=115276

Reviewed by Geoffrey Garen.

Added code to handle conversion between ObjC and JS booleans.

* bridge/objc/objc_instance.mm:
(ObjcInstance::invokeObjcMethod):
* bridge/objc/objc_utility.h:
* bridge/objc/objc_utility.mm:
(JSC::Bindings::convertValueToObjcValue):
(JSC::Bindings::convertObjcValueToValue):
(JSC::Bindings::objcValueTypeForType):


Canonical link: https://commits.webkit.org/133709@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149216 268f45cc-cd09-0410-ab3c-d52691b4dbfc